# django_social_media

./: .env_example  Dockerfile  Makefile  Readme.md  pyproject.toml
docker_compose/: app.yaml
src/account/: admin.py  forms.py  models.py  urls.py  views.py
src/account/migrations/: 0001_initial.py
src/account/templates/account/: details.html  sign_in.html  sign_up.html
src/config/: env_settings.py  settings.py  urls.py
src/main/: urls.py  views.py
src/main/static/main/css/: style.css
src/main/templates/main/: layout.html  main.html
src/main/templates/main/components/: navbar.html
