[tool.poetry]
name = "django-social-media"
version = "0.1.0"
description = ""
authors = ["IlyaGrebenschikov <ilushagr22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
